# cargo-quickstart

./: .cursorignore  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  justfile  lcov.info  rust-toolchain.toml  sonar-project.properties
.cargo/: config.toml  nextest.toml
.github/: dependabot.yml
.github/workflows/: build.yml  cargo-udeps.yml  ci.yml  msrv.yml  osv-scanner.yml  security.yml
crates/quickstart-cli/: .gitignore  CHANGELOG.md  Cargo.toml
crates/quickstart-cli/benches/: command_benchmarks.rs  command_benchmarks_pprof.rs  template_benchmarks.rs  template_benchmarks_pprof.rs
crates/quickstart-cli/src/: args.rs  errors.rs  main.rs
crates/quickstart-cli/src/commands/: completions.rs  init.rs  mod.rs  new.rs  templates.rs
crates/quickstart-cli/src/commands/doctor/: diagnosis.rs  mod.rs  reporting.rs  types.rs
crates/quickstart-cli/src/commands/doctor/checks/: dependencies.rs  files.rs  lints.rs  mod.rs  rust.rs  templates.rs
crates/quickstart-cli/src/commands/init/: config.rs  executor.rs  inquire_api.rs  interactive.rs  mod.rs  tests.rs
crates/quickstart-cli/src/mode/: manual.rs  mod.rs  tui.rs  wizard.rs
crates/quickstart-cli/src/ui/: mod.rs  output.rs  progress.rs  prompts.rs
crates/quickstart-cli/tests/: cli_integration.rs  doctor.rs  init_command_tests.rs  new_command_tests.rs  project_name_validator_tests.rs  ui_prompts_tests.rs  utils.rs
crates/quickstart-cli/tests/fixtures/: README.md  custom_config.txt  default_config.txt  invalid_project_name_invalid_chars.txt  invalid_project_name_non_alpha_start.txt  valid_project_name.txt
crates/quickstart-cli/tests/mocks/: mod.rs  ui.rs
crates/quickstart-lib/: CHANGELOG.md  Cargo.toml
crates/quickstart-lib/src/: config.rs  errors.rs  lib.rs
crates/quickstart-lib/src/plugin/: mod.rs  plugin.rs
crates/quickstart-lib/src/template/: engine.rs  loader.rs  mod.rs  variables.rs
crates/quickstart-lib/src/tools/: helpers.rs  mod.rs
crates/quickstart-lib/tests/: generate_project.rs
crates/quickstart-tui/: CHANGELOG.md  Cargo.toml
crates/quickstart-tui/src/: app_state.rs  events.rs  layout.rs  lib.rs  main.rs
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRATE-USAGE.md  MACROS_GUIDE.md  ROADMAP.md  TODO.md  v0.2.x.md
templates/base/: .editorconfig.hbs  .gitignore.hbs  CHANGELOG.md.hbs  CODE_OF_CONDUCT.md.hbs  CONTRIBUTING.md.hbs  Cargo.toml.hbs  README.md.hbs
templates/base/.cargo/: config.toml.hbs
templates/binary/extended/src/: main.rs.hbs
