[workspace]
default-members = ["crates/quickstart-cli"]
members = ["crates/quickstart-cli", "crates/quickstart-lib"]
resolver = "2"

[workspace.package]
authors = ["sm-moshi sm0sh1@pm.me"]
description = "Cargo wrapper to scaffold opinionated Rust projects quickly."
documentation = "https://docs.rs/cargo-quickstart"
edition = "2021"
homepage = "https://github.com/sm-moshi/cargo-quickstart"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sm-moshi/cargo-quickstart"
rust-version = "1.82.0"
version = "0.1.0"

[workspace.dependencies]
assert_cmd = { version = "2.0.17", features = ["color"], default-features = false }
camino = { version = "1.1.9", features = ["proptest", "serde"] }
cargo_metadata = { version = "0.19.2", features = ["builder"] }
clap = { version = "4.5.37", features = ["cargo", "derive", "std", "wrap_help", "error-context", "suggestions"], default-features = false }
clap_complete = "4.5.48"
color-eyre = { version = "0.6.4", default-features = false }
chrono = { version = "0.4.41", default-features = false }
dialoguer = { version = "0.11.0", default-features = false }
fs_extra = "1.3.0"
handlebars = { version = "6.3.2", default-features = false }
ignore = "0.4.23"
indicatif = { version = "0.17.11", features = ["improved_unicode"], default-features = false }
mockall = "0.13.1"
owo-colors = { version = "4.2.0", features = ["supports-colors"] }
pathdiff = "0.2.3"
predicates = { version = "3.1.3", default-features = false }
pretty_assertions = { version = "1.4.1", default-features = true }
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.19.1"
thiserror = "2.0.12"
toml = { version = "0.8.22", features = ["indexmap"] }
which = { version = "7.0.3", features = ["tracing"], default-features = false }
lazy_static = "1.5.0"
libc = { version = "0.2.172" }

[profile.dev]
codegen-units = 16
debug = true
incremental = false
lto = "thin"
opt-level = 1
overflow-checks = true
panic = "unwind"

[profile.dev.package.quickstart-lib]
opt-level = 3

[profile.dev.package.cargo-quickstart]
opt-level = 1

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = "s"
panic = "abort"
strip = true

[profile.release.package."quickstart-lib"]
opt-level = 3

[profile.release.package."cargo-quickstart"]
opt-level = "z"

[workspace.lints.clippy]
dbg_macro = "deny"
empty_line_after_doc_comments = "deny"
missing_const_for_fn = "deny"
panic = "deny"
todo = "deny"
unwrap_used = "deny"

expect_used = "allow"
must_use_candidate = "allow"

all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[workspace.metadata]
msrv = "1.82.0"

[workspace.metadata.dev-dependencies]
cargo-msrv = "0.18.4"
cargo-audit = "0.21.2"
cargo-udeps = "0.1.55"
