[workspace]
default-members = ["crates/quickstart-cli"]
members = ["crates/quickstart-cli", "crates/quickstart-lib"]
resolver = "2"

[workspace.package]
authors = ["sm-moshi sm0sh1@pm.me"]
description = "Cargo wrapper to scaffold opinionated Rust projects quickly."
documentation = "https://docs.rs/cargo-quickstart"
edition = "2021"
homepage = "https://github.com/sm-moshi/cargo-quickstart"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sm-moshi/cargo-quickstart"
rust-version = "1.82.0"
version = "0.1.1"

[workspace.dependencies]
assert_cmd = { version = "2.0.17", features = ["color"], default-features = false }
clap = { version = "4.5.37", features = ["cargo", "derive", "std", "wrap_help", "error-context", "suggestions"], default-features = false }
clap_complete = "4.5.48"
color-eyre = { version = "0.6.4", default-features = false }
chrono = { version = "0.4.41", default-features = false }
dialoguer = { version = "0.11.0", default-features = false }
handlebars = { version = "6.3.2", default-features = false }
indicatif = { version = "0.17.11", features = ["improved_unicode"], default-features = false }
mockall = "0.13.1"
console = "0.15.11"
pathdiff = "0.2.3"
predicates = { version = "3.1.3", default-features = false }
pretty_assertions = "1.4.1"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.19.1"
thiserror = "2.0.12"
which = { version = "7.0.3", features = ["tracing"], default-features = false }
libc = { version = "0.2.172" }

[profile.dev]
codegen-units = 16
debug = true
lto = "thin"
incremental = false
overflow-checks = true
panic = "unwind"

[profile.dev.package.quickstart-lib]
opt-level = 2

[profile.dev.package.cargo-quickstart]
opt-level = 1

[profile.release]
codegen-units = 1
lto = "fat"
incremental = false
panic = "abort"
strip = true

[profile.release.package."quickstart-lib"]
opt-level = 3

[profile.release.package."cargo-quickstart"]
opt-level = "s"

[workspace.lints.clippy]
dbg_macro = "deny"
empty_line_after_doc_comments = "deny"
missing_const_for_fn = "deny"
panic = "deny"
todo = "deny"
unwrap_used = "deny"

missing_docs = "deny"
missing_errors_doc = "deny"
expect_used = "deny"
unused_crate_dependencies = "deny"

must_use_candidate = "warn"
doc_markdown = "warn"

all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "deny"
unreachable_pub = "warn"
unused_crate_dependencies = "deny"

[workspace.metadata]
msrv = "1.82.0"
