[workspace]
default-members = ["crates/quickstart-cli"]
members = ["crates/quickstart-cli", "crates/quickstart-lib"]
resolver = "2"

[workspace.package]
authors = ["sm-moshi sm0sh1@pm.me"]
description = "Cargo wrapper to scaffold opinionated Rust projects quickly."
documentation = "https://docs.rs/cargo-quickstart"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/sm-moshi/cargo-quickstart"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sm-moshi/cargo-quickstart"
rust-version = "1.82.0"
version = "0.1.3"

[workspace.metadata]
msrv = "1.82.0"

[workspace.dependencies]
assert_cmd = { version = "2.0.17", features = ["color"], default-features = false }
clap = { version = "4.5.51", features = ["cargo", "derive", "std", "wrap_help", "error-context", "suggestions"], default-features = false }
clap_complete = "4.5.60"
color-eyre = { version = "0.6.4", default-features = false }
chrono = { version = "0.4.42", default-features = false }
handlebars = { version = "6.3.2", default-features = false }
indicatif = { version = "0.17.12", features = ["improved_unicode"], default-features = false }
mockall = { version = "0.13.1", default-features = false }
console = { version = "0.16.1", default-features = false }
pathdiff = "0.2.3"
predicates = { version = "3.1.3", default-features = false }
pretty_assertions = "1.4.1"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = { version = "3.23.0", default-features = false }
thiserror = "2.0.17"
which = { version = "8.0.0", features = ["tracing"], default-features = false }
libc = { version = "0.2.177" }
inquire = { version = "0.9.1", default-features = false, features = ["crossterm"] }
anyhow = { version = "1.0.100", default-features = false }
criterion = { version = "0.7.0", default-features = false, features = ["html_reports"] }
uuid = { version = "1.18.1", default-features = false, features = ["v4"] }
pprof = { version = "0.15.0", features = ["flamegraph", "frame-pointer", "criterion"] }

[profile.dev]
codegen-units = 16
opt-level = 1
debug = true
lto = "thin"
overflow-checks = true
panic = "unwind"
incremental = false

[profile.dev.package.quickstart-lib]
opt-level = 3

[profile.release]
opt-level = "s"
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true
incremental = false

[profile.release.package.quickstart-lib]
opt-level = 3

# Criterion + PProf benchmarks
[profile.bench]
opt-level = 3
debug = true
lto = true
codegen-units = 1
incremental = false

# Custom perf profile for benchmarking binaries
[profile.perf]
inherits = "release"
debug = true
opt-level = 3
lto = "thin"
strip = false

# Miri needs zero optimizations and max determinism
[profile.miri]
inherits = "dev"
opt-level = 0
codegen-units = 1
lto = false
strip = false

[workspace.lints.clippy]
dbg_macro = "deny"
empty_line_after_doc_comments = "deny"
missing_const_for_fn = "deny"
panic = "deny"
todo = "deny"
unwrap_used = "deny"

missing_docs = "deny"
missing_errors_doc = "deny"
expect_used = "deny"
unused_crate_dependencies = "deny"

must_use_candidate = "warn"
doc_markdown = "warn"

all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "deny"
unreachable_pub = "warn"
unused_crate_dependencies = "deny"
