[package]
name = "cargo-quickstart"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A cargo subcommand for quickly generating Rust project scaffolds"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["cargo", "cli", "scaffold", "template"]
categories = ["development-tools", "command-line-utilities"]
exclude = ["tests/fixtures/*", "**/*.rs.bk", ".git*"]

[package.metadata]
msrv = "1.82.0"

[[bin]]
name = "cargo-quickstart"
path = "src/main.rs"

[features]
default = ["doctor", "completions"]
doctor = ["which"]
completions = ["dep:clap_complete"]
test-utils = ["quickstart-lib/test-utils"]

[dependencies]
clap = { workspace = true, features = ["cargo", "derive", "std"], default-features = false }
color-eyre = { workspace = true, features = [], default-features = false }
dialoguer = { workspace = true, default-features = false }
indicatif = { workspace = true, default-features = false }
console = { workspace = true }
clap_complete = { workspace = true, optional = true }
quickstart-lib = { path = "../quickstart-lib", version = "=0.1.1" }
which = { workspace = true, default-features = false, optional = true }
thiserror = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true, default-features = false }
mockall = { workspace = true }
predicates = { workspace = true, default-features = false }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
quickstart-lib = { path = "../quickstart-lib", features = ["test-utils"], version = "=0.1.1" }
