[package]
name = "quickstart-lib"
version = "0.1.2"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Library for handling template logic for cargo-quickstart"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["cargo", "template", "scaffold", "project-template"]
categories = ["development-tools", "development-tools::build-utils"]

[package.metadata]
msrv = "1.82.0"

[features]
test-utils = []

[dependencies]
chrono = { workspace = true, features = ["clock", "std"] }
color-eyre = { workspace = true, features = ["track-caller"] }
handlebars = { workspace = true }
pathdiff = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
