[package]
name = "quickstart-lib"
version = "0.1.3"
authors.workspace = true
edition = "2021"
readme = "../../README.md"
rust-version = "1.82.0"
description = "Library for handling template logic for cargo-quickstart"
documentation = "https://docs.rs/quickstart-lib"
homepage = "https://github.com/smeya/cargo-quickstart"
repository = "https://github.com/smeya/cargo-quickstart"
license.workspace = true
keywords = ["cargo", "template", "scaffold", "project-template"]
categories = ["development-tools", "development-tools::build-utils"]

[package.metadata]
msrv = "1.82.0"

[features]
test-utils = []

[dependencies]
chrono = { workspace = true, features = ["clock", "std"] }
color-eyre = { workspace = true, features = ["track-caller"] }
handlebars = { workspace = true }
pathdiff = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
