[package]
name = "quickstart-tui"
version = "0.2.0"
edition = "2021"
description = "Fullscreen TUI for cargo-quickstart (ratatui + crossterm)"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[dependencies]
ratatui = { workspace = true, features = ["crossterm"] }
crossterm = { workspace = true }
color-eyre = { workspace = true, optional = true }
quickstart-lib = { workspace = true }

[features]
default = ["with-color-eyre"]
with-color-eyre = ["color-eyre"]
